# loc_ws

./: .gitignore
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/fast_lio/lib/fast_lio/: fastlio_mapping  pcd_publisher  pcd_to_grid
install/fast_lio/share/fast_lio/: local_setup.sh  package.sh
install/fast_lio/share/fast_lio/config/: mid360.yaml  mid360_loc.yaml  pc2scan_params.yaml
install/fast_lio/share/fast_lio/launch/: mapping.launch .py  mapping.launch.py  pcd_publisher.launch.py  pcd_to_grid.launch.py  point_look.launch .py
install/livox_ros_driver2/lib/livox_ros_driver2/: livox_ros_driver2_node
install/livox_ros_driver2/share/livox_ros_driver2/: package.sh
install/livox_ros_driver2/share/livox_ros_driver2/config/: MID360_config.json
install/livox_ros_driver2/share/livox_ros_driver2/launch_ROS2/: rviz_MID360_launch.py
install/nav_demo/share/nav_demo/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/nav_demo/share/nav_demo/config/: nav2_params copy.yaml  nav2_params_wpr.yaml
install/nav_demo/share/nav_demo/launch/: nav.launch.py
install/nav_demo/share/nav_demo/maps/: first_floor1.yaml  my_2d_map.yaml  neibor_office.pgm  neibor_office.yaml  neibor_office2.pgm  neibor_office2.yaml  office1.pgm  test.pcd
install/point2d_loc/lib/point2d_loc/: livox_to_scan  point_look
install/point2d_loc/share/point2d_loc/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/point2d_loc/share/point2d_loc/cmake/: point2d_locConfig.cmake
install/point2d_loc/share/point2d_loc/launch/: laser_tf_pub.py
install/point2d_loc/share/point2d_loc/map/: office2.pgm
install/point2d_loc/share/point2d_loc/rviz/: loc_map.rviz
install/scout_base/share/scout_base/: package.sh
install/scout_base/share/scout_base/launch/: scout_base.launch.py  scout_mini_base.launch.py
install/scout_description/share/scout_description/: local_setup.sh  package.sh
install/scout_msgs/share/scout_msgs/: local_setup.sh  package.dsv  package.ps1  package.sh
install/ugv_sdk/share/ugv_sdk/: package.sh
log/: latest_build
map/: dog1.pgm  dog1.yaml  first_floor2.pgm  first_floor2.yaml  neibor_office3.pgm  neibor_office3.yaml  neibor_office4.pgm  neibor_office4.yaml  neibor_office5.pgm  neibor_office5.yaml  new.pgm  new.yaml  office2.yaml  sec_floor.yaml
src/: readme.md
src/FAST_LIO/: CMakeLists.txt
src/FAST_LIO/launch/: loc_mapping.launch.py  online_mapping.launch.py
src/FAST_LIO/src/: IMU_Processing.hpp  laserMapping.cpp  laserMapping_raw.cpp  pcd_publisher.cpp  pcd_to_grid.cpp  preprocess.h
src/nav_demo/: CMakeLists.txt  NAV2_SETUP.md  log  readme.md
src/nav_demo/config/: controller.yaml  nav2_params1.yaml  nav2_params2.yaml
src/nav_demo/launch/: nav2_odom_navigation.launch.py  nav2_odom_navigation1.launch.py
src/nav_demo/maps/: first_floor1.pgm  my_2d_map1.yaml  office1.yaml  sec_floor.pgm
src/nav_demo/src/: simple_navigator.cpp
src/point2d_loc/: CMakeLists.txt  readme.md
src/point2d_loc/launch/: laser_tf_pub.launch.py  pointcloud_to_laserscan_launch.py
src/point2d_loc/rviz/: rviz.rviz
src/point2d_loc/src/: livox_to_scan.cpp  point_look.cpp  pointcloud_to_laserscan.cpp  pointcloud_to_laserscan1.cpp  pointcloud_to_laserscan_3d.cpp  pointcloud_to_laserscan_raw.cpp
src/scout_ros2_driver/: README.md
src/scout_ros2_driver/scout_ros2/scout_base/launch/: test.py
src/scout_ros2_driver/ugv_sdk/: CMakeLists.txt
tf/: frames_2025-11-24_10.46.02.gv
(+41 files in other folders)
